step down should resend heartbeats if secondaries are not caught up

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.1.9
    • Affects Version/s: None
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • RPL A (10/09/15)
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When a primary is requested to step down without

      {force: true}

      and secondaries are not caught up, it has to wait until the previously scheduled heartbeats are run to obtain updated liveness information on the secondaries before completing the step down process. This may take a while with a long heartbeat interval. Restarting the heartbeats if the primary cannot step down immediately will ensure that we get the most update information on the secondaries in the cluster.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: