SERVER-20671 step down restarts heartbeats before waiting for secondaries to catch up